--- a/index (5).html
+++ b/index (5).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Анимированная машинка</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div class="scene">
@@ -12,4 +12,5 @@
         <img src="carrrrr-Photoroom.png" class="car" alt="Машинка">
     </div>
 </body>
+
 </html>
